deploy: efe9757a240e0841eaac4f2d735160cb870f4606

--- a/master/devdocs.html
+++ b/master/devdocs.html
@@ -97,11 +97,7 @@ associated with a test, and every PR should be formatted using automated formatt
 placed in a folder using the name of the test module (that is, <code class="docutils literal notranslate"><span class="pre">test_drycal.py</span></code> has
 its test files in <code class="docutils literal notranslate"><span class="pre">test_drycal</span></code> folder), or in the <code class="docutils literal notranslate"><span class="pre">common</span></code> folder for files
 that may be reused multiple times.</p>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-Several convenience functions are provided in the <code class="docutils literal notranslate"><span class="pre">utils.py</span></code> module:
-=======
-Several convencience functions are provided in the <code class="docutils literal notranslate"><span class="pre">utils.py</span></code> module:
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 0bf65e1 (Devdocs v1)</p>
+<p>Several convenience functions are provided in the <code class="docutils literal notranslate"><span class="pre">utils.py</span></code> module:</p>
 <blockquote>
 <div><ul class="simple">
 <li><p><code class="docutils literal notranslate"><span class="pre">datadir</span></code>, implementing the above mentioned external test data functionality,</p></li>
