--- a/master/genindex.html
+++ b/master/genindex.html
@@ -105,11 +105,9 @@
 </li>
       <li><a href="yadg.dgutils.html#yadg.dgutils.calib.calib_handler">calib_handler() (in module yadg.dgutils.calib)</a>
 </li>
-      <li><a href="yadg.parsers.xpstrace.html#yadg.parsers.xpstrace.phispe.camel_to_snake">camel_to_snake() (in module yadg.parsers.xpstrace.phispe)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="yadg.dgutils.html#yadg.dgutils.dgutils.combine">combine() (in module yadg.dgutils.dgutils)</a>
+      <li><a href="yadg.parsers.xpstrace.html#yadg.parsers.xpstrace.phispe.camel_to_snake">camel_to_snake() (in module yadg.parsers.xpstrace.phispe)</a>
 </li>
       <li><a href="yadg.dgutils.html#yadg.dgutils.dateutils.complete_timestamps">complete_timestamps() (in module yadg.dgutils.dateutils)</a>
 </li>
@@ -199,8 +197,6 @@
 </li>
         <li><a href="yadg.dgutils.html#module-yadg.dgutils.dateutils">yadg.dgutils.dateutils</a>
 </li>
-        <li><a href="yadg.dgutils.html#module-yadg.dgutils.dgutils">yadg.dgutils.dgutils</a>
-</li>
         <li><a href="yadg.dgutils.html#module-yadg.dgutils.helpers">yadg.dgutils.helpers</a>
 </li>
         <li><a href="yadg.dgutils.html#module-yadg.dgutils.pintutils">yadg.dgutils.pintutils</a>
@@ -220,6 +216,8 @@
         <li><a href="yadg.parsers.chromtrace.html#module-yadg.parsers.chromtrace.agilentcsv">yadg.parsers.chromtrace.agilentcsv</a>
 </li>
         <li><a href="yadg.parsers.chromtrace.html#module-yadg.parsers.chromtrace.agilentdx">yadg.parsers.chromtrace.agilentdx</a>
+</li>
+        <li><a href="yadg.parsers.chromtrace.html#module-yadg.parsers.chromtrace.clarityasc">yadg.parsers.chromtrace.clarityasc</a>
 </li>
         <li><a href="yadg.parsers.chromtrace.html#module-yadg.parsers.chromtrace.ezchromasc">yadg.parsers.chromtrace.ezchromasc</a>
 </li>
@@ -306,11 +304,7 @@
 </li>
       <li><a href="yadg.parsers.chromtrace.html#yadg.parsers.chromtrace.main.parse_detector_spec">parse_detector_spec() (in module yadg.parsers.chromtrace.main)</a>
 </li>
-      <li><a href="yadg.dgutils.html#yadg.dgutils.dgutils.pointdata">pointdata() (in module yadg.dgutils.dgutils)</a>
-</li>
       <li><a href="yadg.html#yadg.subcommands.preset">preset() (in module yadg.subcommands)</a>
-</li>
-      <li><a href="yadg.dgutils.html#yadg.dgutils.dgutils.printdg">printdg() (in module yadg.dgutils.dgutils)</a>
 </li>
       <li><a href="yadg.parsers.html#yadg.parsers.basiccsv.process">process() (in module yadg.parsers.basiccsv)</a>
 
@@ -320,6 +314,8 @@
         <li><a href="yadg.parsers.chromtrace.html#yadg.parsers.chromtrace.agilentcsv.process">(in module yadg.parsers.chromtrace.agilentcsv)</a>
 </li>
         <li><a href="yadg.parsers.chromtrace.html#yadg.parsers.chromtrace.agilentdx.process">(in module yadg.parsers.chromtrace.agilentdx)</a>
+</li>
+        <li><a href="yadg.parsers.chromtrace.html#yadg.parsers.chromtrace.clarityasc.process">(in module yadg.parsers.chromtrace.clarityasc)</a>
 </li>
         <li><a href="yadg.parsers.chromtrace.html#yadg.parsers.chromtrace.ezchromasc.process">(in module yadg.parsers.chromtrace.ezchromasc)</a>
 </li>
@@ -372,11 +368,9 @@
 </li>
       <li><a href="yadg.dgutils.html#yadg.dgutils.btools.read_from_file">read_from_file() (in module yadg.dgutils.btools)</a>
 </li>
-      <li><a href="yadg.dgutils.html#yadg.dgutils.btools.read_value">read_value() (in module yadg.dgutils.btools)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="yadg.dgutils.html#yadg.dgutils.dgutils.reduce">reduce() (in module yadg.dgutils.dgutils)</a>
+      <li><a href="yadg.dgutils.html#yadg.dgutils.btools.read_value">read_value() (in module yadg.dgutils.btools)</a>
 </li>
       <li><a href="yadg.parsers.flowdata.html#yadg.parsers.flowdata.drycal.rtf">rtf() (in module yadg.parsers.flowdata.drycal)</a>
 </li>
@@ -517,13 +511,6 @@
 </li>
       </ul></li>
       <li>
-    yadg.dgutils.dgutils
-
-      <ul>
-        <li><a href="yadg.dgutils.html#module-yadg.dgutils.dgutils">module</a>
-</li>
-      </ul></li>
-      <li>
     yadg.dgutils.helpers
 
       <ul>
@@ -591,6 +578,13 @@
 
       <ul>
         <li><a href="yadg.parsers.chromtrace.html#module-yadg.parsers.chromtrace.agilentdx">module</a>
+</li>
+      </ul></li>
+      <li>
+    yadg.parsers.chromtrace.clarityasc
+
+      <ul>
+        <li><a href="yadg.parsers.chromtrace.html#module-yadg.parsers.chromtrace.clarityasc">module</a>
 </li>
       </ul></li>
       <li>
