deploy: 377686703b7650ad06afddd74f3a954ba67bf155

--- a/master/version.4_1.html
+++ b/master/version.4_1.html
@@ -104,6 +104,7 @@ already part of the spec in v4.0.0.</p></li>
 introduced in v4.0.1</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">NaN</span></code> and <code class="docutils literal notranslate"><span class="pre">Inf</span></code> in the metadata of some input formats should now be handled
 properly, without producing a non-compliant json file.</p></li>
+<li><p>added partial support for <code class="docutils literal notranslate"><span class="pre">mpr</span></code> files including <code class="docutils literal notranslate"><span class="pre">ExtDev</span></code> module</p></li>
 </ul>
 </li>
 <li><p><code class="docutils literal notranslate"><span class="pre">chromtrace</span></code> supports <code class="docutils literal notranslate"><span class="pre">fusion.zip</span></code> format</p></li>
