--- a/master/yadg.parsers.electrochem.html
+++ b/master/yadg.parsers.electrochem.html
@@ -262,7 +262,7 @@ EC-Lab, etc. Here a quick overview (offsets from start of module data).</p>
 </dd>
 <dt class="field-even">Returns</dt>
 <dd class="field-even"><p><strong>(data, metadata, fulldate)</strong> – Tuple containing the timesteps, metadata, and the full date tag. For mpr files,
-the full date is always specified.</p>
+the full date is specified if the “LOG” module is present.</p>
 </dd>
 <dt class="field-odd">Return type</dt>
 <dd class="field-odd"><p>tuple[list, dict, bool]</p>
